# lightweight-web

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  backup.sh  deploy.sh
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
crates/admin/: Cargo.toml
crates/calc/: Cargo.toml
crates/calc/src/: e1rm.rs  lib.rs  pr.rs  trend.rs  validation.rs  vectors.rs
crates/calc/vectors/: calc_vectors.json
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  main.rs
crates/cli/src/commands/: analytics.rs  exercises.rs  import.rs  mod.rs  sessions.rs  templates.rs
crates/core/: Cargo.toml
crates/core/src/: analytics.rs  auth.rs  beta.rs  db.rs  error.rs  exercises.rs  export.rs  invites.rs  lib.rs  models.rs  preferences.rs  sessions.rs  templates.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: client.rs  main.rs  tools.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  auth.rs  google.rs  main.rs  static_files.rs
crates/server/src/routes/: admin.rs  analytics.rs  beta.rs  exercises.rs  export.rs  history.rs  invites.rs  mod.rs  preferences.rs  sessions.rs  templates.rs
docs/: BACKLOG.md  CHANGELOG.md  analytics-plan.md  android-backlog.md  brand-guide.md  branding-exploration.html  exercise-library-draft.md
docs/archive/: android-implementation-spec.md
docs/inbox/: fri lower b.md  import.json  mon 2 feb upper A.md  tue 3 feb lower a.md  upper b.md
docs/release/: .measure-temp.html  android-release-plan.md  app-icon-export.html  data-safety-answers.md  export-icon-1024.mjs  (+9 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ios/: .gitignore  CLAUDE.md  README.md  project.yml
migrations/: 001_initial.sql  002_seed_data.sql  003_multi_user.sql  004_rir.sql  005_user_preferences.sql  006_template_versioning.sql  007_invites.sql  008_auth_sessions.sql  009_invite_quota_10.sql  010_google_oauth.sql  011_beta_signups.sql  012_beta_join.sql  013_auth_session_platform.sql
scripts/: build.sh  dev.sh  phase0-repair.sql
(+213 files in other folders)
