[package]
name = "lightweight-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
thiserror = "1"
hex = "0.4"
