[package]
name = "lightweight-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lw-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.4", features = ["server", "transport-io", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
schemars = "0.8"
