[package]
name = "lightweight-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lightweight-core = { path = "../core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
